src/internal/vm/snapshots/hebi__internal__vm__tests__add_objects.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
"a" + "b"


# Result:
Object(
    "ab",
)
