src/internal/vm/snapshots/hebi__internal__vm__tests__arithmetic.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
v := 10 # 10
v += 1  # 11
v -= 1  # 10
v **= 2 # 100
v /= 5  # 20
v %= 1  # 0
v


# Result:
Float(
    0.0,
)
