src/internal/vm/snapshots/hebi__internal__vm__tests__array_equality.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
print [] == []
print [1] == [1]
print [1, 2] == [1, 2]
print [1] != []
print [] != [1]
print [1, 2] != [2, 1]
print [1, 2] != ["1", 2]
print [to_int, to_str] == [to_int, to_str]


# Result:
None

# Output:
true
true
true
true
true
true
true
true

