src/internal/vm/snapshots/hebi__internal__vm__tests__basic_fn_call.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
fn test():
  return "yo"

test()


# Result:
Object(
    "yo",
)
