src/internal/vm/snapshots/hebi__internal__vm__tests__bool_equality.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
a := true
b := false
if a == b:
  print "a == b"
if a != b:
  print "a != b"


# Result:
None

# Output:
a != b

