src/internal/vm/snapshots/hebi__internal__vm__tests__bool_gt_error.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
true > false


# Result:
runtime error: cannot `>` `bool`
